# video-recommendation-system

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/api/auth/: dependencies.py  routes.py  schemas.py
backend/api/feed/: routes.py
backend/core/: db.py  helper_funcs.py  models.py  postgre.py  security.py
backend/crud/: feed.py  metrics.py  users.py
backend/data/: chroma.sqlite3  dataset1.csv  dataset2.csv
backend/data/f77a8dff-4542-42d1-bc5e-ada5d91d40a4/: index_metadata.pickle
backend/db/: session.py
backend/models/: __init__.py  metrics.py  users.py  videos.py
backend/schemas/: users_interaction.py
frontend/: vite.config.js
frontend/src/: App.jsx  api.js  main.jsx
frontend/src/Pages/: AccountPage.jsx  Home.jsx  RegisterPage.jsx  SearchPage.jsx  SignInPage.jsx
frontend/src/components/: HomeCard.jsx  Navbar.jsx  SearchBar.jsx  SearchResult.jsx  VideoCard.jsx
