[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.1",
    "dotenv>=0.9.9",
    "fastapi[all]>=0.128.0",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "psycopg2>=2.9.11",
    "sentence-transformers>=5.2.2",
]
